[package]
name = "mls"
version = "0.1.0"
edition = "2024"
description = "Media LS — terminal-native audio/video file browser with metadata columns, TUI preview, and structured JSON output"
license = "MIT"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
lru = "0.16.3"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
nucleo-matcher = "0.3.1"
image = { version = "0.25.9", default-features = false, features = ["jpeg"] }
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3.19.1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Panic prevention
unwrap_used = "deny"
expect_used = "warn"
panic = "deny"
panic_in_result_fn = "deny"
unimplemented = "deny"
# No cheating
allow_attributes = "warn"
# Code hygiene
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
# Safety
await_holding_lock = "deny"
large_futures = "deny"
exit = "warn"
mem_forget = "deny"
# Pedantic relaxations (too noisy)
module_name_repetitions = "allow"
similar_names = "allow"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
